<resources>
    <string name="app_name">Будильник</string>
    <string name="melody1">Melody 1</string>
    <string name="melody2">Melody 2</string>
    <string name="melody3">Melody 3</string>
    <string name="melody4">Melody 4</string>
    <string name="melody5">Melody 5</string>
    <string name="melody6">Ship alarm</string>
    <string name="melody7">Banjo</string>
    <string name="melody8">Morning</string>
    <string name="melody9">Simple</string>
    <string name="melody10">Fitness</string>
    <string name="melody11">Medieval</string>
    <string name="melody12">Introduction</string>
    <string name="main_color">Осн. цвет</string>
    <string name="second_color">Доп. цвет</string>
    <string name="all_alarms_off">Все сигналы\nвыключены</string>
    <string name="add">add</string>
    <string name="delete">delete</string>
    <string name="timer">Таймер</string>
    <string name="stopwatch">Секундомер</string>
    <string name="new_signal">Новый сигнал</string>
    <string name="confirm">confirm</string>
    <string name="signal_name">Название сигнала</string>
    <string name="cancel">cancel</string>
    <string name="settings">Настройки</string>
    <string name="melody_input">Мелодия:</string>
    <string name="classic">Classic</string>
    <string name="play_melody">play melody</string>
    <string name="change_melody">Сменить мелодию</string>
    <string name="vibration">Вибрация</string>
    <string name="repeats_count">Количество повторов:</string>
    <string name="_3">3</string>
    <string name="_5">5</string>
    <string name="inf">Inf</string>
    <string name="interval_input">Интервал раз в</string>
    <string name="_10">10</string>
    <string name="min">мин.</string>
    <string name="customize">Кастомизация</string>
    <string name="wallpapers_input">Обои:</string>
    <string name="color_theme_input">Цветовая тема:</string>
    <string name="change">Сменить</string>
    <string name="repeat_caps">ПОВТОР</string>
    <string name="off_all_alarms">Выключить все будильники</string>
    <string name="volume_off">volume_off</string>
    <string name="error_is_exist">Ошибка: Такой элемент уже существует</string>
    <string name="changetag">ChangeTag</string>
    <string name="addtag">AddTag</string>
    <string name="all_signals_off">Все сигналы\nвыключены</string>
    <string name="alarm_less_min">Звонок менее чем через 1 мин.</string>
    <string name="alarm_through">Звонок через\n</string>
    <string name="alarm_without_n">Звонок через </string>
    <string name="min_point">мин.</string>
    <string name="ch">ч.</string>
    <string name="basic_channel_id">basic_channel_id</string>
    <string name="basic_notifications">Basic Notifications</string>
    <string name="alarm_notification">Alarm notification</string>
    <string name="alarm">Будильник</string>
    <string name="press_to_off">Нажмите, чтобы отключить будильник</string>
    <string name="turn_off">Turn Off</string>
    <string name="repeat">Repeat</string>
    <string name="change_alarm">Изменить будильник</string>
    <string name="alarm_fragment_tag">ALARM_FRAGMENT_TAG</string>
    <string name="need_permissions">Необходимы разрешения</string>
    <string name="please_gain_permissions">Пожалуйста, предоставьте разрешение на наложение поверх других приложений для правильной работы будильника.</string>
    <string name="settings_txt">Настройки</string>
    <string name="cancel_txt">Отмена</string>
    <string name="theme">Theme</string>
    <string name="melody_not_selected">Melody not selected</string>
    <string name="wallpaper1">wallpaper1</string>
    <string name="wallpaper2">wallpaper2</string>
    <string name="wallpaper3">wallpaper3</string>
    <string name="wallpaper4">wallpaper4</string>
    <string name="wallpaper5">wallpaper5</string>
    <string name="wallpaper6">wallpaper6</string>
    <string name="wallpaper7">wallpaper7</string>
    <string name="wallpaper8">wallpaper8</string>
    <string name="wallpaper9">wallpaper9</string>
    <string name="wallpaper10">wallpaper10</string>
    <string name="repeat_in">Повтор сигнала сработает в</string>
    <string name="not_implemented">Пока не реализовано</string>
    <string name="access">Разрешить</string>
    <string name="cancel_caps">ОТМЕНА</string>
    <string name="error_screen_on">Экран так и не включился за отведенное время</string>
    <string name="overflowmenubutton">OverflowMenuButton</string>
</resources>