<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/alarm_layout"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    >

    <androidx.coordinatorlayout.widget.CoordinatorLayout
    android:layout_width="0dp"
    android:layout_height="0dp"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintTop_toTopOf="parent"
    app:layout_constraintBottom_toTopOf="@+id/bottomGuideLine">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="wrap_content"
        android:layout_height="250dp"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        >
        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_scrollFlags="scroll|exitUntilCollapsed"
            app:contentScrim="?attr/colorPrimary"
            app:expandedTitleMarginStart="24dp"
            app:expandedTitleMarginEnd="24dp"
            >
            <TextView
                android:id="@+id/barTextView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fontFamily="casual"
                android:padding="20dp"
                android:gravity="center"
                android:textColor="?attr/colorAccent"
                android:text="@string/all_alarms_off"
                android:autoSizeTextType="uniform"
                android:autoSizeMinTextSize="10sp"
                android:autoSizeMaxTextSize="100sp"
                android:autoSizeStepGranularity="2sp"
                app:layout_collapseMode="parallax"
                android:textStyle="bold|italic" />

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:contentDescription="@string/app_name"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
                app:layout_collapseMode="pin"
                android:title="@string/app_name"
                >
            </androidx.appcompat.widget.Toolbar>
        </com.google.android.material.appbar.CollapsingToolbarLayout>
    </com.google.android.material.appbar.AppBarLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="parent"
        android:layout_marginTop="10dp"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        android:orientation="vertical">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerview"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            />

    </LinearLayout>
    </androidx.coordinatorlayout.widget.CoordinatorLayout>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/bottomGuideLine"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.95"
        />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/floatingActionButtonAdd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:contentDescription="@string/add"
        android:layout_marginBottom="10dp"
        app:layout_constraintBottom_toTopOf="@+id/bottomGuideLine"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:src="@drawable/ic_add_alarm"
        app:tint="?attr/colorPrimary"
        android:backgroundTint="?attr/colorAccent"
        app:borderWidth="0dp"
        android:visibility="visible" />


    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/floatingActionButtonDelete"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:layout_marginBottom="10dp"
        app:layout_constraintBottom_toTopOf="@+id/bottomGuideLine"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:contentDescription="@string/delete"
        android:src="@drawable/ic_delete_alarm"
        app:tint="?attr/colorPrimary"
        android:backgroundTint="?attr/colorAccent"
        app:borderWidth="0dp"
        android:visibility="gone"
        />

    <Button
        android:id="@+id/button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textAllCaps="false"
        android:text="@string/app_name"
        android:autoSizeTextType="uniform"
        android:autoSizeMinTextSize="10sp"
        android:autoSizeMaxTextSize="22sp"
        android:autoSizeStepGranularity="2sp"
        app:layout_constraintTop_toBottomOf="@+id/bottomGuideLine"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/button3"
        app:layout_constraintHorizontal_chainStyle="spread_inside"
        android:textColor="?attr/colorAccent"
        style="?android:attr/buttonBarButtonStyle" />

    <Button
        android:id="@+id/button3"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textAllCaps="false"
        android:autoSizeTextType="uniform"
        android:autoSizeMinTextSize="10sp"
        android:autoSizeMaxTextSize="22sp"
        android:autoSizeStepGranularity="2sp"
        style="?android:attr/buttonBarButtonStyle"
        app:layout_constraintTop_toBottomOf="@+id/bottomGuideLine"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/button"
        app:layout_constraintEnd_toStartOf="@+id/button4"
        android:text="@string/timer" />

    <Button
        android:id="@+id/button4"
        android:layout_width="0dp"
        android:textAllCaps="false"
        android:layout_height="wrap_content"
        android:autoSizeTextType="uniform"
        android:autoSizeMinTextSize="10sp"
        android:autoSizeMaxTextSize="22sp"
        android:autoSizeStepGranularity="2sp"
        style="?android:attr/buttonBarButtonStyle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bottomGuideLine"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/button3"
        android:text="@string/stopwatch" />

</androidx.constraintlayout.widget.ConstraintLayout>